[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/platforming part.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level2.gd" type="Script" id=3]
[ext_resource path="res://3d/mushroom.glb" type="PackedScene" id=4]
[ext_resource path="res://3d/shp/rock4.glb" type="PackedScene" id=5]
[ext_resource path="res://scenes/Prop.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Killzone.gd" type="Script" id=7]
[ext_resource path="res://scenes/BakeBake.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Health.tscn" type="PackedScene" id=9]
[ext_resource path="res://3d/shp/fern.glb" type="PackedScene" id=10]
[ext_resource path="res://3d/shp/rock1.glb" type="PackedScene" id=11]
[ext_resource path="res://3d/shp/grass.glb" type="PackedScene" id=12]
[ext_resource path="res://3d/shp/rubble.glb" type="PackedScene" id=13]
[ext_resource path="res://3d/shp/flowers3.glb" type="PackedScene" id=14]
[ext_resource path="res://3d/shp/flowers2.glb" type="PackedScene" id=15]
[ext_resource path="res://3d/shp/flowers1.glb" type="PackedScene" id=16]
[ext_resource path="res://3d/shp/flowers4.glb" type="PackedScene" id=17]
[ext_resource path="res://scenes/CutsceneCirno.tscn" type="PackedScene" id=18]

[sub_resource type="ProceduralSky" id=14]
sky_top_color = Color( 0.25098, 0.45098, 0.823529, 1 )
sky_horizon_color = Color( 0.52549, 0.709804, 0.960784, 1 )
ground_bottom_color = Color( 0.32549, 0.419608, 0.580392, 1 )
ground_horizon_color = Color( 0.372549, 0.388235, 0.423529, 1 )
sun_longitude = -90.87

[sub_resource type="Environment" id=15]
background_mode = 2
background_sky = SubResource( 14 )
ambient_light_color = Color( 0.439216, 0.454902, 0.513726, 1 )
ambient_light_sky_contribution = 0.0
fog_enabled = true
fog_color = Color( 0.32549, 0.419608, 0.580392, 1 )
fog_depth_enabled = false
fog_height_enabled = true
fog_height_min = -4.3
fog_height_max = -20.4
fog_height_curve = 0.707107
tonemap_mode = 4
tonemap_white = 0.5
auto_exposure_scale = 1.0
auto_exposure_speed = 2.0
ssao_enabled = true
ssao_radius = 7.0
ssao_bias = 0.001
dof_blur_far_amount = 0.07
dof_blur_near_distance = 4.0
dof_blur_near_amount = 0.17
glow_intensity = 0.29
glow_blend_mode = 0
glow_hdr_threshold = 0.49
glow_hdr_luminance_cap = 7.17
adjustment_brightness = 1.06
adjustment_contrast = 1.06

[sub_resource type="BoxShape" id=17]
extents = Vector3( 72.2687, 1, 71.1237 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 49.1843, 26.587, 57.5141 )

[sub_resource type="GDScript" id=20]
script/source = "extends Area


func cutscene():
    if Manager.fading:
        yield(Manager, \"fade_completed\")
    
    Manager.fade_time_factor = 0.25
    Manager.push_input_mode(\"cutscene\")
    
    var player = Manager.find_player()
    player.start_cutscene()
    
    var cam = get_parent().get_node(\"StaticCutsceneCamera\")
    var cirno = get_parent().get_node(\"Cirno\")
    
    Manager.hide_text()
    Manager.wipe_fade_out()
    yield(Manager, \"fade_completed\")
    
    player.look_towards(cirno)
    cam.current = true
    Manager.wipe_fade_in()
    yield(Manager, \"fade_completed\")
    
    Manager.show_text(cirno, \"Aww, all the poor bakebakes...\", \"Cirno\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(player, \"What, don't tell me you're worried about them.\", \"Alice\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(cirno, \"Wouldn't it be cute to have one as a pet? Just like a pet frog!\", \"Cirno\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(player, \"Considering what you do to frogs, I don't want to imagine that.\", \"Alice\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(cirno, \"Oh, wow. I wish I'd thought of— Er—\", \"Cirno\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(player, \"Can't you put on a better performance?\", \"Alice\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(cirno, \"I'm, uh, the strongest?\", \"Cirno\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(player, \"Yes, yes, of course you are.\", \"Alice\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(cirno, \"Hey, remember that time I beat up that huge youkai for you? It's my turn to be the huge youkai!\", \"Cirno\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.show_text(player, \"Oy...\", \"Alice\")
    yield(Manager, \"cutscene_continue\")
    
    Manager.hide_text()
    
    Manager.fade_time_factor = 1.0
    yield(get_tree(), \"idle_frame\")
    Manager.pop_input_mode(\"cutscene\")
    
    Manager.change_to(\"res://scenes/LevelBoss.tscn\")

var disabled = false
# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
    if disabled or Manager.input_mode != \"gameplay\":
        return
    if get_overlapping_bodies().size() > 0:
        disabled = true
        cutscene()
"

[sub_resource type="CylinderShape" id=21]
radius = 2.88718

[node name="Level2" type="Spatial"]
script = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.35866, 0.702609, -0.614576, 0.109692, 0.622094, 0.77522, 0.927001, -0.345455, 0.14605, 0, 4.18716, 4.82622 )
light_color = Color( 1, 0.901961, 0.796078, 1 )
shadow_enabled = true
directional_shadow_split_1 = 0.208
directional_shadow_split_2 = 0.51
directional_shadow_split_3 = 0.8
directional_shadow_normal_bias = 0.1
directional_shadow_bias_split_scale = 1.0
directional_shadow_depth_range = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 15 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.494496, -0.40635, 0.628943 )

[node name="platforming part" parent="." instance=ExtResource( 1 )]

[node name="mushroom" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.52167, 0, 0, 0, 0.52167, 0, 0, 0, 0.52167, 20.5102, 3.48785, 0.17555 )

[node name="mushroom2" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.745785, 0, 0, 0, 0.745785, 0, 0, 0, 0.745785, 13.4239, 0.651212, 7.84397 )

[node name="Prop" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.94983, 0, 0.312766, 0, 1, 0, -0.312766, 0, -0.94983, 4.94702, -0.56044, 4.97241 )
model_file = ExtResource( 5 )

[node name="mushroom3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6818, 5.07371, -11.1755 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -18.2376, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12426, 0 )
shape = SubResource( 17 )

[node name="Killzone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.3403, 0 )
collision_layer = 0
collision_mask = 6
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Killzone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20.0443, 0 )
shape = SubResource( 16 )

[node name="BakeBake" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1925, 2.73982, 7.85199 )

[node name="BakeBake2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.91425, 2.7637, 6.98696 )

[node name="BakeBake3" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.55758, 2.8941, 10.5931 )

[node name="BakeBake4" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.4696, 5.10522, 4.82062 )

[node name="BakeBake5" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.5051, 6.3789, 0.130718 )

[node name="BakeBake6" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5526, 9.69871, -10.9801 )

[node name="BakeBake7" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2938, 5.12338, -7.83329 )

[node name="BakeBake8" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3852, 7.69704, -10.7672 )

[node name="BakeBake9" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.1402, 12.9264, -6.32169 )

[node name="BakeBake15" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.9626, 17.5215, 2.64354 )

[node name="BakeBake10" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5891, 17.5215, -1.65812 )

[node name="BakeBake11" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.86004, 15.4563, -1.49095 )

[node name="BakeBake12" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.91354, 15.03, -2.3277 )

[node name="BakeBake13" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.8866, 16.5889, 0.0804956 )

[node name="BakeBake14" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.78266, 16.1601, -0.203699 )

[node name="Prop2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859211, -1.54486, -3.59156 )
destructible = true
contents = ExtResource( 9 )

[node name="Prop3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3371, -1.57126, -4.24884 )
destructible = true
contents = ExtResource( 9 )

[node name="Prop4" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.859, 11.9566, -4.44758 )
destructible = true
contents = ExtResource( 9 )

[node name="grass" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.323488, 0, 0.381255, 0, 0.5, 0, -0.381255, 0, 0.323488, 2.20951, -1.29931, -0.0373983 )

[node name="flowers3" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.619497, -1.38055, -0.499532 )

[node name="flowers2" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.0259239, 0, -0.499328, 0, 0.5, 0, 0.499328, 0, 0.0259239, 2.69249, -1.81897, -2.50604 )

[node name="Prop5" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.8997, 4.28508, 1.07468 )
destructible = true
contents = ExtResource( 9 )

[node name="flowers1" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.18371, -1.11442, 2.93929 )

[node name="flowers4" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4.28156, -1.61393, 5.57419 )

[node name="rubble" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4.30716, -1.63939, 4.81809 )

[node name="rubble2" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.131911, 0, -0.482286, 0, 0.5, 0, 0.482286, 0, 0.131911, 13.4532, 1.75704, 8.11387 )

[node name="rock1" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.135535, 0, 0.48128, 0, 0.5, 0, -0.48128, 0, 0.135535, 6.67029, 1.8813, 9.5062 )

[node name="fern" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.0298361, 0, -0.499109, 0, 0.5, 0, 0.499109, 0, 0.0298361, 19.2111, 4.11382, -6.25354 )

[node name="fern2" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 18.3114, 4.11783, -7.2358 )

[node name="fern3" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.378361, 0, 0.326869, 0, 0.5, 0, -0.326869, 0, 0.378361, 19.5034, 4.11397, -7.79818 )

[node name="fern4" parent="." instance=ExtResource( 10 )]
transform = Transform( -0.0405083, 0, 0.498356, 0, 0.5, 0, -0.498356, 0, -0.0405083, 21.2066, 4.52799, 1.15626 )

[node name="grass2" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.0855605, 0, -0.492625, 0, 0.5, 0, 0.492625, 0, 0.0855605, 19.1428, 4.21529, 2.09733 )

[node name="grass3" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.396889, 0, 0.304104, 0, 0.5, 0, -0.304104, 0, 0.396889, 20.6358, 4.47896, -0.811977 )

[node name="grass4" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 21.8994, 4.57822, 0.159492 )

[node name="grass5" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 8.43926, 1.69865, 6.68858 )

[node name="grass6" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.0319962, 0, -0.498975, 0, 0.5, 0, 0.498975, 0, 0.0319962, 8.04563, 1.87217, 9.88476 )

[node name="fern5" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.463644, 0, 0.187174, 0, 0.5, 0, -0.187174, 0, 0.463644, 6.26037, 1.84564, 8.20945 )

[node name="flowers5" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.5004, 1.86046, 10.0066 )

[node name="flowers6" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.1706, 1.68094, 7.00657 )

[node name="flowers7" parent="." instance=ExtResource( 16 )]
transform = Transform( -0.0497815, 0, -0.497516, 0, 0.5, 0, 0.497516, 0, -0.0497815, 8.65637, 1.9258, 11.0034 )

[node name="flowers8" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 18.4682, 4.01531, 5.55626 )

[node name="flowers9" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.163617, 0, 0.472472, 0, 0.5, 0, -0.472472, 0, 0.163617, 19.5594, 4.20496, 5.39897 )

[node name="flowers10" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 9.76255, 6.75093, -9.44525 )

[node name="flowers11" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 18.9848, 4.16094, -9.05895 )

[node name="flowers12" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 20.4108, 4.46885, 3.56212 )

[node name="flowers13" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.368786, 0, -0.337634, 0, 0.5, 0, 0.337634, 0, 0.368786, 19.2427, 4.06226, 5.94607 )

[node name="flowers14" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.64945, -1.74014, 1.96466 )

[node name="grass7" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.462303, 0, -0.190463, 0, 0.5, 0, 0.190463, 0, 0.462303, -1.55179, -1.35262, -0.654456 )

[node name="grass8" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.271631, 0, 0.419781, 0, 0.5, 0, -0.419781, 0, 0.271631, 1.05735, -1.42974, 2.23662 )

[node name="rock2" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 16.5736, 11.9878, -3.2904 )

[node name="grass9" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.7334, 11.9414, -5.69224 )

[node name="grass10" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.0609173, 0, 0.496275, 0, 0.5, 0, -0.496275, 0, 0.0609173, 10.9357, 11.931, -5.6235 )

[node name="grass11" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.5984, 16.5215, -1.26202 )

[node name="grass12" parent="." instance=ExtResource( 12 )]
transform = Transform( -0.23805, 0, 0.439696, 0, 0.5, 0, -0.439696, 0, -0.23805, 10.9405, 16.5215, 2.57677 )

[node name="flowers15" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 6.43038, 15.6997, 1.36358 )

[node name="flowers16" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 11.39, 16.5215, -0.384917 )

[node name="flowers17" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.8129, 16.5215, 0.847496 )

[node name="flowers18" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.8926, 16.5215, 2.19277 )

[node name="flowers19" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 11.9799, 16.5215, 0.538182 )

[node name="flowers20" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.2657, 16.5215, 0.452 )

[node name="flowers21" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 13.8746, 16.5215, -0.164107 )

[node name="flowers22" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.2415, 16.5215, 1.80956 )

[node name="flowers23" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.5482, 16.5215, -0.0513387 )

[node name="grass13" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.418774, 0, -0.273183, 0, 0.5, 0, 0.273183, 0, 0.418774, 1.8853, -1.51875, -6.20136 )

[node name="fern6" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.477879, 0, 0.147079, 0, 0.5, 0, -0.147079, 0, 0.477879, 2.80211, -1.43576, -7.36836 )

[node name="rock3" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.453116, 0.187789, -0.0970658, -0.19143, 0.461903, 0, 0.08967, 0.0371627, 0.490488, 16.7967, 4.94652, -10.8016 )

[node name="flowers24" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 10.5626, 6.77844, -10.3129 )

[node name="grass14" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.476806, 0.150519, 0, -0.150519, 0.476806, 0, 0, 0, 0.5, 13.9221, 5.79773, -9.21062 )

[node name="grass15" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.473195, 0.161513, 0, -0.161513, 0.473195, 6.99621, 14.1872, -2.01386 )

[node name="flowers25" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 13.449, 16.5215, 1.25986 )

[node name="flowers26" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 13.6783, 16.5215, -1.08183 )

[node name="grass16" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.248314, -0.0323445, -0.432775, 0.0160969, 0.498953, -0.0280546, 0.433683, 0, 0.248835, 10.7024, 16.5215, 0.851711 )

[node name="fern7" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.463064, -0.18352, 0.0435007, 0.188605, 0.450579, -0.106803, 0, 0.115322, 0.486519, 9.22676, 16.2977, 3.26091 )

[node name="fern8" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.6884, 16.5215, 3.45398 )

[node name="fern9" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.477683, 0.141303, 0.0430389, -0.147712, 0.456957, 0.139183, 0, -0.145685, 0.478305, 14.6067, 16.4899, -1.77791 )

[node name="fern10" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.207258, 0.282674, -0.301754, -0.192818, 0.303843, 0.280731, 0.412147, 1.2368e-08, 0.283081, 15.5417, 16.394, 0.93097 )

[node name="Cirno" parent="." instance=ExtResource( 18 )]

[node name="StaticCutsceneCamera2" type="Camera" parent="."]
transform = Transform( 0.707107, -0.18686, -0.68197, 0, 0.964451, -0.26426, 0.707107, 0.18686, 0.68197, -2.3905, -0.677014, 2.42988 )
current = true
fov = 50.0

[node name="StaticCutsceneCamera" type="Camera" parent="."]
transform = Transform( 0.867713, 0.248532, -0.430471, 0, 0.866025, 0.5, 0.497065, -0.433857, 0.751462, 9.20088, 20.1726, 6.70738 )
current = true
fov = 40.0

[node name="CutsceneCamera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.729, 0, 0 )

[node name="Camera" type="Camera" parent="CutsceneCamera"]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 60, 33 )
current = true
fov = 25.0
far = 200.0

[node name="minicutscene" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.6057, 17.8619, 0.800948 )
collision_layer = 0
collision_mask = 2
script = SubResource( 20 )

[node name="CollisionShape" type="CollisionShape" parent="minicutscene"]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0 )
shape = SubResource( 21 )
